# TX-2-simulator

./: .gitattributes  .gitignore  CITATION.cff  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  OPEN-QUESTIONS.md  OVERVIEW.md  README.md  runchecks.sh
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md 
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: README.md  deploy-wasm.yml  quickstart.yml  rustdocs.yml
assembler/: Cargo.toml  README.md
assembler/examples/: echo.tx2as  hello.tx2as  hellosym.tx2as
assembler/src/: main.rs
assembler/src/asmlib/: ast.rs  chumskyparser.rs  collections.rs  directive.rs  driver.rs  ek.rs  eval.rs  glyph.rs  lexer.rs  lib.rs  listing.rs  manuscript.rs  memorymap.rs  parser.rs  readerleader.rs  source.rs  span.rs  state.rs  symbol.rs  symtab.rs  tests.rs  types.rs
assembler/src/asmlib/ast/: asteval.rs  comma_tests.rs  eval.rs  manuscript.rs
assembler/src/asmlib/chumskyparser/: helpers.rs  tests.rs
assembler/src/asmlib/driver/: output.rs  symtab.rs  tests.rs
assembler/src/asmlib/lexer/: input_file_tests.rs  lower.rs  rx.rs  tests.rs
assembler/src/asmlib/parser/: ek.rs  helpers.rs  symex.rs  terminal.rs  tests.rs
assembler/src/asmlib/tests/: mod.rs
assembler/src/tx2dis/: main.rs
assembler/src/tx2m4as/: main.rs
assembler/src/tx2maketape/: main.rs
assembler/tests/: golden.rs  hello-golden.rs
base/: Cargo.toml
base/src/: bitselect.rs  charset.rs  collections.rs  instruction.rs  lib.rs  onescomplement.rs  prelude.rs  quarters.rs  readerleader.rs  splay.rs  subword.rs  types.rs
base/src/charset/: tests.rs
base/src/collections/: pq.rs
base/src/instruction/: format.rs  mod.rs
base/src/onescomplement/: error.rs  signed.rs  unsigned.rs
base/src/onescomplement/signed/: mod.rs  tests18.rs  tests36.rs  tests5.rs  tests9.rs
base/src/onescomplement/unsigned/: mod.rs  tests.rs
cli/: Cargo.toml
cli/src/: clock.rs  lw.rs  main.rs  sleep.rs
cpu/: Cargo.toml
cpu/src/: alarm.rs  alarmunit.rs  bugreport.rs  changelog.rs  clock.rs  context.rs  control.rs  diagnostics.rs  event.rs  exchanger.rs  io.rs  lib.rs  memory.rs  memorymap.md  memorymap.rs  tx2.rs  types.rs
cpu/src/control/: mod.rs  op_configuration.rs  op_index.rs  op_io.rs  op_jump.rs  op_loadstore.rs  tests.rs  timing.rs  trap.rs
cpu/src/io/: dev_lincoln_writer.rs  dev_petr.rs  mod.rs  pollq.rs
docs/: OVERVIEW.md  README.md  build-trouble.md  getting-started.md
docs/assembler/: building.md  compound-characters.md  getting-started.md  index.md  input.md  limitations.md  output.md
docs/debugging/: cli.md  index.md  web.md
examples/: README.md  echo.tape  hello.tape
tx2-web/: .eslintignore  .eslintrc.cjs  .gitignore  Cargo.toml  LICENSE-MIT  README.md  config.common.js  package-lock.json  package.json  tsconfig.json  webpack.config.js  webpack.development.js  webpack.profiling.js  webpack.release.js
tx2-web/built-files/: .gitignore  README.md
tx2-web/public/: index.html
tx2-web/rust/: README.md
tx2-web/rust/src/: alarm.rs  context.rs  io.rs  lib.rs  lw.rs  samples.rs  utils.rs
tx2-web/rust/src/io/: keyboard.rs
tx2-web/src/: .gitignore  AlarmPanel.tsx  App.tsx  Flex.tsx  Instructions.tsx  IoPanel.tsx  Keyboard.tsx  LincolnWriter.tsx  MainGrid.tsx  TapeLoadModal.tsx  alarm-panel.scss  checkbox.tsx  index.tsx  machine.ts  modal.style.tsx  styles.scss  styles.scss.d.ts
tx2-web/src/controller/: alarms.ts  io.ts  tx2.ts  types.ts
tx2-web/src/model/: machine.ts
wasm/: Cargo.toml
wasm/src/: lib.rs  utils.rs
wasm/www/: index.html  index.js  package-lock.json  package.json  tx2.css  webpack.config.js
