[package]
name = "assembler"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
base = {path = "../base" }

# Clap is dual-licensed MIT/Apache
# https://github.com/clap-rs/clap/blob/master/LICENSE-MIT
# https://github.com/clap-rs/clap/blob/master/LICENSE-APACHE
clap = { version = "3", features = ["derive"] }

# nom has an MIT-style copyright license.
# https://github.com/Geal/nom/blob/main/LICENSE
nom = "7"

chumsky = "1.0.0-alpha.3"

# nom_locate has an MIT-style copyright license.
# https://github.com/fflorent/nom_locate/blob/master/LICENSE
nom_locate = "4"

# tempfile has an "MIT or Apache-2.0" copyright license
tempfile = "3"

# tracing has an MIT copyright license.
# https://github.com/tokio-rs/tracing/blob/master/LICENSE
tracing = "0.1"

# tracing-subscriber has an MIT copyright license.
# https://github.com/tokio-rs/tracing/blob/master/LICENSE
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[lib]
name = "assembler"
path = "src/asmlib/lib.rs"

[[bin]]
name = "tx2m4as"
path = "src/tx2m4as/main.rs"

[[bin]]
name = "tx2dis"
path = "src/tx2dis/main.rs"
