[package]
name = "cli"
version = "0.1.0"
edition = "2021"
license = "MIT"
# This is an open source project but not really intended to be
# published on crates.io.  So we don't want to do that accidentally.
publish = false

[dependencies]
cpu = {path = "../cpu" }
base = {path = "../base" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
termcolor = "1"                 # Unlicense OR MIT license
atty = "0.2"                    # MIT license
