[package]
name = "cpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base = { path = "../base" }
tracing = "0.1" # MIT license
keyed_priority_queue = "0.4.1"	# MIT license

[lib]
name = "cpu"
path = "src/lib.rs"
