[package]
name = "cpu"
version = "0.1.0"
edition = "2021"
license = "MIT"
# This is an open source project but not really intended to be
# published on crates.io.  So we don't want to do that accidentally.
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base = { path = "../base" }
tracing = "0.1" # MIT license

[lib]
name = "cpu"
path = "src/lib.rs"
