[package]
name = "tx2-web"
description = "Crate which runs as WASM to simulate the TX-2 in a browser"
version = "0.1.0"
authors = ["James Youngman <youngman@google.com>"]
edition = "2021"
license-file = "../LICENSE-MIT"
publish = false

[lib]
path = "rust/src/lib.rs"
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
float_next_after = "0.1"	# License: MIT
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
tracing = "0.1"			# License: MIT
tracing-wasm = "0.2.1"		# License: MIT or Apache
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] } # License: MIT or Apache
serde-wasm-bindgen = "0.4.3"					   # License: MIT
cpu = {path = "../cpu" }
base = {path = "../base" }

# The `console_error_panic_hook` crate provides better debugging of
# panics by logging them with `console.error`.  This has quite a large
# code size cost, but at this stage in the project's development,
# we're more concerned about correctness than speed, so it is on by
# default.
console_error_panic_hook = { version = "0.1.6", optional = true }

web-sys = { version = "0.3.4", features = [ 'Document', 'Element', 'HtmlElement', 'Node', 'Window',] } # License: MIT or Apache-2.0
