[package]
name = "tx-2-wasm"
version = "0.1.0"
authors = ["James Youngman <youngman@google.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
float_next_after = "0.1"	# License: MIT
tracing = "0.1"			# License: MIT
tracing-wasm = "0.2.1"		# License: MIT or Apache
wasm-bindgen = "0.2.63"
cpu = {path = "../cpu" }
base = {path = "../base" }

# The `console_error_panic_hook` crate provides better debugging of
# panics by logging them with `console.error`.  This has quite a large
# code size cost, but at this stage in the project's development,
# we're more concerned about correctness than speed, so it is on by
# default.
console_error_panic_hook = { version = "0.1.6", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
